[gd_scene load_steps=11 format=2]

[ext_resource path="res://Imagenes/Player/Idle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Imagenes/Player/Walk.png" type="Texture" id=3]
[ext_resource path="res://Imagenes/Player/Attack.png" type="Texture" id=4]

[sub_resource type="Animation" id=5]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:root_node")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ NodePath("..") ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Walk:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Attack:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 15.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 9, 15.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Idle" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4

[node name="Walk" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
hframes = 6

[node name="Attack" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 5 )
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Walk = SubResource( 4 )

[node name="CollisionPerro" type="CollisionShape2D" parent="."]
position = Vector2( -5, 8.5 )
shape = SubResource( 1 )

[node name="AreaAttack" type="Area2D" parent="."]

[node name="CollisionAttack" type="CollisionShape2D" parent="AreaAttack"]
position = Vector2( 11, 8.5 )
shape = SubResource( 6 )
disabled = true

[connection signal="cambioVelocidad1" from="." to="." method="_on_Player_cambioVelocidad1"]
[connection signal="cambioVelocidad2" from="." to="." method="_on_Player_cambioVelocidad2"]
[connection signal="cambioVelocidad3" from="." to="." method="_on_Player_cambioVelocidad3"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
